# tha_bomb_online

./: .env.exemple  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
game/: admin.py  consumers.py  models.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_sky_year.py  0003_auto_20200224_1918.py  0004_auto_20200409_2107.py  0005_auto_20200412_1644.py  0006_card_order_in_hand.py  0007_auto_20200507_1500.py  0008_game_next_game.py  0009_auto_20200611_1410.py  0010_auto_20200611_1419.py  0011_scrapeddata.py  0012_scrapeddata_url.py  0013_auto_20200719_1317.py  0014_scrapeddata_url_img.py  0015_clicker_delete_scrapeddata.py  0016_clicker_active_player.py  0017_clickerreward.py  0018_delete_clicker_alter_clickerreward_options.py  0018_friend_alter_clickerreward_options.py  0019_alter_friend_unrevelant_info_alter_friend_website.py  0020_alter_friend_description.py  0021_arrivalbet_nameproposition_nametoguess.py  0022_nametoguess_nb_guessed.py  0023_nametoguess_points_nametoguess_votes.py
game/static/game/: clicker.css  clicker.js  default_design.css  game.js  game_rules.js  house_tracker_custom_script.js  japan.css  robots.txt  uninit_game.js  waiting_room.js  win_bar.js
game/templates/game/: base.html  clicker.html  faq.html  friends.html  game.html  game_rules.html  game_uninitialized.html  house_tracker.html  house_tracker.user.js  index.html  skies_of_denmark.html  (+2 more)
game/views/: __init__.py  clicker.py  game.py  index.py  scrap.py  user.py  waiting_room.py
timebomb/: asgi.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
